desktop-base (10.0.0~exp1) UNRELEASED; urgency=medium

  * Build with debhelper, bump compatibility level to 10, drop CDBS build
    dependency.
  * Add autopkgtests to validate XMLs structure and avoid bugs like #862228.

 -- Aurélien COUDERC <zecoucou@free.fr>  Mon, 30 Jan 2017 22:21:40 +0100

desktop-base (9.0.3) unstable; urgency=medium

  * Fix a few problems in maintainer scripts, thanks Raphaël Hertzog for the
    detailed review.
    No change in behaviour but it will make the scripts more readable and
    maintainable.
    - preinst: reorganize if conditions for package version detection in a
               readable order.
    - prerm: remove references to non existing $priority variable in loops.
    - prerm: no need to remove secondary alternatives just before removing
             a main alternative. Secondary are removed in the process anyway.
    (Closes: #853224)

 -- Aurélien COUDERC <zecoucou@free.fr>  Mon, 30 Jan 2017 22:21:40 +0100

desktop-base (9.0.2) unstable; urgency=medium

  [ Aurélien COUDERC ]
  * Include size 3840x2160 (4k) wallpaper and lockscreen. (Closes: #851930)
  * Include more sizes of emblem-debian, add emblem-debian-white.
    (Closes: #833529)
  * Lockscreen/Joy: fix wallpaper image being used instead of lockscreen.

 -- Aurélien COUDERC <zecoucou@free.fr>  Tue, 24 Jan 2017 23:32:47 +0100

desktop-base (9.0.1) unstable; urgency=medium

  [ Aurélien COUDERC ]
  * postinst: Report success even when update-grub fails, this is needed
    for installation to work inside live systems. (Closes: #850601)
  * Plymouth/{softWaves,Lines,Joy}: provide fsckd progress support. Thanks to
    Ubuntu and Didier Roche for doing the work and providing timely info.
    (Closes: #850181)
  * Plymouth/softWaves: various visual tweaks, boost logo glow, improvements
    in password input rendering. Thanks Juliette!
  * Plymouth/Lines: ensure password field doesn’t bump into the Debian image
    even for smaller height screens. (Closes: #774226)