@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE wallpapers SYSTEM "gnome-wp-list.dtd">
 <wallpapers>
-  <wallpaper>
-    <!-- don't include words such as "wallpaper" (avoids translations) -->
+  <!-- don't include words such as "wallpaper" (avoids translations) -->
   <wallpaper>
     <name>Joy Inksplat</name>
     <filename>/usr/share/desktop-base/joy-inksplat-theme/wallpaper/gnome-background.xml</filename>
